[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyos"
version = "0.1.0"
description = "PolicyOS - AI-powered policy office platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<6",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["alembic", "alembic.*", "tests", "tests.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]
"alembic/versions/*.py" = ["E501"]
